[package]
name = "convex-sync"
version = "0.1.0"
edition = "2021"
description = "Sync local agent state (todos, tasks, sessions, memory, scores) to Convex"

[[bin]]
name = "convex-sync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
